# Imgstor

./: .env  .env.development  .gitignore  README.md  README.zh-TW.md  bun.lockb  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: deploy.yml  main.yml
public/locales/en/: translation.json
public/locales/zh/: translation.json
src/: App.tsx  i18n.ts  index.css  index.module.scss  index.scss  main.tsx  theme.module.scss  vite-env.d.ts
src/components/alerts/: index.tsx  script.ts  style.module.scss
src/components/images/: index.tsx  style.module.scss
src/components/loading/: index.tsx  script.ts  style.module.scss
src/components/main/: index.tsx  style.module.scss
src/components/menu/: index.tsx  style.module.scss
src/components/notifications/: index.tsx  script.ts  style.module.scss
src/components/settings/: index.tsx  style.module.scss
src/components/side-options/: index.tsx  style.module.scss
src/components/sign-in/: index.tsx  style.module.scss
src/components/tags-selecter/: index.tsx  style.module.scss  tag-item.tsx
src/route-paths/: index.ts
src/services/: google.ts  imgstor.ts  settings.ts  tags-selecter.ts  tags-selector.ts
src/services/converter/imgproc/wasm/: .gitignore  Cargo.toml
src/services/converter/imgproc/wasm/src/: animation_decoder.rs  animation_encode.rs  callback_logs.rs  detect_animation.rs  first_frame.rs  image_decode.rs  lib.rs
src/structs/: eventSystem.ts  message.ts
src/styles/: _variables.scss  components.module.scss
src/utils/: message.ts
(+100 files in other folders)
