[package]
name = "imgproc"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false


[lib]
crate-type = ["cdylib"]

[dependencies]
gif = "0.13.1"
image = "0.25.5"
js-sys = "0.3.76"
png = "0.17.16"
psd = "0.3.5"
wasm-bindgen = "0.2.99"

[build-dependencies]
cc = "1.0"
